cluster/core/cert-manager/domain-certificate.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls-route
  namespace: cert-manager
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: "Host('*.${SECRET_DOMAIN}')"
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      # middlewares:
      #   - name: auth
      #   - name: redirect-https
  tls:
    secretName: internal-certificate-tls
