cluster/core/cert-manager/traefik-tls-route.sops.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: traefik-tls-route
    namespace: cert-manager
spec:
    entryPoints:
        - web
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:l3mNQs1GnYsO37WNtSXsg8BJq9zMfdRVFBm1eozVQ/c=,iv:Yn7m224q9Z7kL2FOusUBneykoNKx0g0raTD4yN3vA/A=,tag:+x/4W+G0rBlxMMpUc8z8fQ==,type:str]
          kind: Rule
          services:
            - name: api@internal
              kind: TraefikService
    tls:
        secretName: internal-certificate-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2021-11-01T23:09:51Z"
    mac: ENC[AES256_GCM,data:2Ycu1dDNK6D3lFwrrBmCUOYzFimRTkuJmv3RH4icobFDr36i5wqoaw5+nT9kZ1fwzV9VFBzkCG12akPj48bIYEmBC3jPIB7YtagtsrxFVAN/fzn9C7J6Knw1k6MumKei4tWvWDSnkMKpKBA7ISzQkVDO/yr5vANtXfJxU7H3ego=,iv:5VKfJ6JgGA8xYpiToY6WzDS9PaGVhFGeve8p0R218Nc=,tag:upTkCjKNGHIVxmG5+m0HjQ==,type:str]
    pgp:
        - created_at: "2021-11-01T23:09:50Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA80P3erPiRpkAQ/9EHkETfJsm4nd6YbBV1Kh3Q73MKoJrSX2VUl4k48Fyowu
[...]
            =pU80
            -----END PGP MESSAGE-----
          fp: F92C1A4A2B35F826A1E364EFF5A1747BE18D04FC
    encrypted_regex: ^(helm|data|stringData|networkPath|hosts?|loadBalancerIP|image|email|dnsZones|dnsNames|match)$
    version: 3.7.1
